realized that we had an unneeded line break on the war page. logo now sits correctly

--- a/css/main.css
+++ b/css/main.css
@@ -100,7 +100,7 @@ li {
 }
 
 #section1 {
-	padding-left: 10px; margin-top:-50px; padding-top:50px;height:400px;color: #d5d4d0; background-color: #5f5e66;
+	padding-left: 10px; padding-top:50px;height:400px;color: #d5d4d0; background-color: #5f5e66;
 }
 
 #section2 {
